First commited as before_68283_rev1